# repren

./: .copier-answers.yml  .gitignore  .style.yapf  .travis.yml  AGENTS.md  LICENSE  Makefile  README.md  SUPPLY-CHAIN-SECURITY.md  pyproject.toml  repren  repren.py  setup.py  tryscript.config.js
.agents/skills/tbd/: SKILL.md
.codex/: ensure-gh-cli.sh  hooks.json  tbd-closing-reminder.sh  tbd-session.sh
.cursor/rules/: automatic-shortcut-triggers.mdc  backward-compatibility-rules.mdc  convex-rules.mdc  general-coding-rules.mdc  general-comment-rules.mdc  general-eng-assistant-rules.mdc  general-style-rules.mdc  general-testing-rules.mdc  python-rules-opinionated.mdc  python-rules.mdc  tool-development-rules.mdc  typescript-cli-tool-rules.mdc  typescript-rules.mdc
.github/workflows/: ci.yml  publish.yml
.speculate/: copier-answers.yml  settings.yml
.tbd/: .gitattributes  .gitignore  config.yml
.tbd/data-sync/: meta.yml
.tbd/data-sync/issues/: is-01kjf2qyp00yq4mv4fyr93pacv.md  is-01kjf2qytte3012eynj0cpjef8.md  is-01kjf2qz1wcns2pvh644a0cfzs.md  is-01kjf2qz6xkkg9r54m8e9bzscs.md  is-01kjf2qzbm812bgt22vhcs8bqy.md  is-01kjf2qzg7d736rssatbm4dytd.md  is-01kjf2qzmtz7g58ycj6gjp89r0.md  is-01kjf2qzsb93jk9jj3gx9a5yfh.md  is-01kjg3mwxet6xkvg9322y1e1z8.md  is-01kjg3mwxeykhwb79kj4wx5wdc.md  is-01kjg3mx1j7vh1fkbex9vs6z80.md  is-01kjg3mx1jmfzrncfhx6dqm3vv.md  is-01kjg3mx1nmgmpm4t4gwfnez5s.md
.tbd/data-sync/mappings/: ids.yml
devtools/: gendocs.py  generate_readme.py  lint.py
docs/: README.template.md  development.md  development.npm.sample.md  docs-overview.md  globbing-and-backup-improvements.md  installation.md  publishing.md  repren-docs.md  repren-manual.md  research-replace-rename-landscape.md
docs/general/agent-guidelines/: general-tdd-guidelines.md  golden-testing-guidelines.md  typescript-dependency-injection-guidelines.md  typescript-testing-guidelines.md
docs/general/agent-rules/: automatic-shortcut-triggers.md  backward-compatibility-rules.md  convex-rules.md  general-coding-rules.md  general-comment-rules.md  general-eng-assistant-rules.md  general-style-rules.md  general-testing-rules.md  python-rules-opinionated.md  python-rules.md  tool-development-rules.md  typescript-cli-tool-rules.md  typescript-rules.md
docs/general/agent-setup/: shortcut-setup-beads.md  shortcut-setup-github-cli.md
docs/general/agent-shortcuts/: shortcut-cleanup-all.md  shortcut-coding-spike.md  shortcut-commit-code.md  shortcut-create-or-update-pr-with-validation-plan.md  shortcut-create-or-update-validation-plan.md  shortcut-create-pr-simple.md  shortcut-implement-beads.md  shortcut-implement-spec.md  shortcut-merge-upstream.md  shortcut-new-architecture-doc.md  shortcut-new-implementation-beads-from-spec.md  shortcut-new-research-brief.md  shortcut:cleanup-all.md  shortcut:cleanup-remove-trivial-tests.md  shortcut:cleanup-update-docstrings.md  shortcut:commit-code.md  shortcut:create-or-update-pr-with-validation-plan.md  shortcut:create-pr-simple.md  shortcut:implement-beads.md  shortcut:implement-spec.md  shortcut:new-implementation-spec.md  shortcut:new-plan-spec.md  shortcut:new-validation-spec.md  shortcut:precommit-process.md  shortcut:refine-spec.md  shortcut:review-all-code-specs-docs-convex.md  shortcut:review-pr-and-fix-with-beads.md  shortcut:review-pr.md  shortcut:revise-architecture-doc.md  shortcut:update-spec.md  shortcut:update-specs-status.md
docs/project/architecture/: template-architecture.md
docs/project/research/: template-research-brief.md  test-coverage-analysis.md
docs/project/specs/: template-bugfix.md  template-implementation-spec.md  template-plan-spec.md  template-validation-spec.md
repren/: __init__.py  agent_skill.py  claude_skill.py  markdown_renderer.py  readable_argparse.py  repren.py
repren/skills/: SKILL.md
scripts/: check-golden-coverage.sh
tests/: .gitignore  golden-tests.sh  pytests.py  run.sh  test_backup_management.py  test_globbing.py  tests.sh
tests/tryscript/: advanced-options.tryscript.md  backups-undo-clean.tryscript.md  cache-lifecycle-internals.tryscript.md  help-errors.tryscript.md  json-output.tryscript.md  patterns-and-case.tryscript.md  regex-wordbreaks.tryscript.md  renames-and-full.tryscript.md  replacements.tryscript.md  stdin-collision-overlap-validation.tryscript.md  walk-and-filters.tryscript.md
tests/tryscript/fixtures/: .gitignore  patterns-misc  patterns-rotate-abc
workflows/: ci.yml  publish.yml
(+19 files in other folders)
