# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/jlevy/repren"

[project]
name = "repren"
description = "Powerful CLI string replacement and file renaming for agents and humans"
authors = [
    { name = "Joshua Levy", email = "joshua@cal.berkeley.edu" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["version"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: Software Development",
]


# ---- Main dependencies ----

dependencies = []


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.11",
    "codespell>=2.4.1",
    "rich>=14.2.0",
    "basedpyright>=1.37.1",
    "funlog>=0.2.1",
    "jinja2>=3.1.4",
    "pytest-cov>=7.0.0",
]

[project.scripts]
repren = "repren:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
pattern = "default-unprefixed"

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["repren"]


# ---- Settings ----

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
]
ignore = [
    "E501",  # https://docs.astral.sh/ruff/rules/line-too-long/
    "E731",  # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # Disabled for formatter compatibility:
    "W191",  # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111",  # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114",  # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117",  # https://docs.astral.sh/ruff/rules/over-indented/
    "D206",  # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300",  # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000",  # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001",  # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002",  # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003",  # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812",  # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819",  # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002",  # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.basedpyright]
include = ["repren", "tests", "devtools"]
# Standard settings for a well-typed codebase:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportPrivateUsage = false
reportImplicitOverride = false
reportUnreachable = false
# These require more type annotations to enable:
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false

[tool.codespell]
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "repren",
    "tests",
]
norecursedirs = []
filterwarnings = []
